--- a/src/components/task-list/task-list.css
+++ b/src/components/task-list/task-list.css
@@ -1,11 +1,8 @@
 .list-wrapper {
-  /* background-color: #1e181e; */
-  border: 1px solid #fed33f;
+  border: 2px solid #fed33f;
   border-radius: 3px;
-  /* color: #fed33f; */
   border-radius: 10px;
   overflow: hidden;
-  /* padding: 0.75rem; */
   background: linear-gradient(transparent 10%),
     repeating-linear-gradient(
       to bottom,
@@ -18,7 +15,7 @@
     0 0,
     100% 0,
     100% 100%,
-    /* 6% 100%, */ 0 100%,
+    0 100%,
     0 93%,
     0 68%,
     0 65%,
@@ -29,13 +26,51 @@
   position: relative;
 }
 
+.list-wrapper::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50px;
+  height: 100%;
+  pointer-events: none;
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+  background-color: rgba(254, 209, 63, 0.5);
+  border-radius: 10px 0 0 10px;
+  z-index: -1;
+}
+
+.list-wrapper:hover::after {
+  background-color: rgba(254, 209, 63, 1);
+}
+
+.list-title-wrapper {
+  background-color: rgba(0, 0, 0, 1);
+  padding: 5px 24px;
+  text-shadow: -9px -6px 40px currentcolor;
+}
+
+.list-title {
+  font-family: "VT323", monospace;
+  font-size: 1.4rem;
+  letter-spacing: 0.035rem;
+  text-shadow: -9px -6px 40px currentcolor;
+  color: #fed33f;
+  text-transform: uppercase;
+}
+
+.list-wrapper:hover .list-title {
+  text-shadow: 0 0 20px currentcolor;
+}
+
 .list-container {
-  padding: 12px 12px 12px 20px;
+  padding: 12px 12px 12px 24px;
   display: flex;
   flex-direction: column;
   gap: 12px;
   overflow-y: auto;
   height: 70vh;
+  scroll-behavior: smooth;
 }
 
 .list-container::-webkit-scrollbar {
@@ -44,7 +79,7 @@
 
 .list-container::-webkit-scrollbar-thumb {
   background-color: #fed33f;
-  border-radius: 4px;
+  border-radius: 10px;
 }
 
 .list-container::-webkit-scrollbar-track {
@@ -89,33 +124,4 @@
 
 .list-container::-webkit-scrollbar-button:horizontal:decrement {
   display: none;
-}
-
-.list-wrapper::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 50px;
-  height: 100%;
-  pointer-events: none;
-  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
-  background-color: rgba(254, 209, 63, 0.8);
-  border-radius: 10px 0 0 10px;
-  z-index: -1;
-}
-
-.list-title-wrapper {
-  background-color: rgba(0, 0, 0, 1);
-  padding: 5px 20px;
-  text-shadow: -9px -6px 40px currentcolor;
-}
-
-.list-title {
-  font-family: "VT323", monospace;
-  font-size: 1.125rem;
-  letter-spacing: 0.035rem;
-  text-shadow: -9px -6px 40px currentcolor;
-  color: #fed33f;
-  text-transform: uppercase;
 }
