--- a/src/components/task-list/task-list.css
+++ b/src/components/task-list/task-list.css
@@ -83,45 +83,28 @@
 }
 
 .list-container::-webkit-scrollbar-track {
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(254, 209, 63, 0.1);
 }
 
+.list-container::-webkit-scrollbar-thumb:active,
 .list-container::-webkit-scrollbar-thumb:hover {
-  background-color: #e6b800;
-}
-
-.list-container::-webkit-scrollbar-thumb:active {
-  background-color: #cc9900;
+  background-color: #fdc91d;
 }
 
 .list-container::-webkit-scrollbar-thumb:window-inactive {
-  background-color: #b38f00;
+  background-color: #f1d76e;
 }
 
-.list-container::-webkit-scrollbar-corner {
-  background-color: transparent;
-}
-
+.list-container::-webkit-scrollbar-corner,
 .list-container::-webkit-scrollbar-track-piece {
   background-color: transparent;
 }
 
-.list-container::-webkit-scrollbar-button {
-  display: none;
-}
-
-.list-container::-webkit-scrollbar-button:vertical:increment {
-  display: none;
-}
-
-.list-container::-webkit-scrollbar-button:vertical:decrement {
-  display: none;
-}
-
-.list-container::-webkit-scrollbar-button:horizontal:increment {
-  display: none;
-}
-
+.list-container::-webkit-scrollbar-button,
+.list-container::-webkit-scrollbar-button:vertical:increment,
+.list-container::-webkit-scrollbar-button:vertical:decrement,
+.list-container::-webkit-scrollbar-button:horizontal:increment,
 .list-container::-webkit-scrollbar-button:horizontal:decrement {
   display: none;
 }
