--- a/src/components/task-list/task-list.css
+++ b/src/components/task-list/task-list.css
@@ -25,6 +25,19 @@
   position: relative;
 }
 
+/* wrapper-type--pending Border Color */
+/* wrapper-type--pending Border Color */
+/* wrapper-type--pending Border Color */
+.wrapper-type--pending {
+  border-color: rgba(254, 209, 63, 1);
+}
+.wrapper-type--completed {
+  border-color: rgba(43, 228, 234, 1);
+}
+.wrapper-type--canceled {
+  border-color: rgba(232, 97, 90, 1);
+}
+
 .list-wrapper::after {
   content: "";
   position: absolute;
@@ -34,13 +47,34 @@
   height: 100%;
   pointer-events: none;
   box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
-  background-color: rgba(254, 209, 63, 0.5);
   border-radius: 10px 0 0 10px;
   z-index: -1;
 }
 
-.list-wrapper:hover::after {
+/* .wrapper-type--pending::after Background Color */
+/* .wrapper-type--pending::after Background Color */
+/* .wrapper-type--pending::after Background Color */
+.wrapper-type--pending::after {
+  background-color: rgba(254, 209, 63, 0.5);
+}
+.wrapper-type--completed::after {
+  background-color: rgba(43, 228, 234, 0.5);
+}
+.wrapper-type--canceled::after {
+  background-color: rgba(232, 97, 90, 0.5);
+}
+
+/* wrapper-type--pending:hover::after Background Color */
+/* wrapper-type--pending:hover::after Background Color */
+/* wrapper-type--pending:hover::after Background Color */
+.wrapper-type--pending:hover::after {
   background-color: rgba(254, 209, 63, 1);
+}
+.wrapper-type--completed:hover::after {
+  background-color: rgba(43, 228, 234, 1);
+}
+.wrapper-type--canceled:hover::after {
+  background-color: rgba(232, 97, 90, 1);
 }
 
 .list-wrapper::before {
@@ -55,6 +89,19 @@
   z-index: 1;
 }
 
+/* wrapper-type--pending::before Background Color */
+/* wrapper-type--pending::before Background Color */
+/* wrapper-type--pending::before Background Color */
+.wrapper-type--pending::before {
+  background-color: rgba(254, 209, 63, 1);
+}
+.wrapper-type--completed::before {
+  background-color: rgba(43, 228, 234, 1);
+}
+.wrapper-type--canceled::before {
+  background-color: rgba(232, 97, 90, 1);
+}
+
 .list-title-wrapper {
   background-color: rgba(0, 0, 0, 1);
   padding: 5px 24px;
@@ -66,8 +113,20 @@
   font-size: 1.4rem;
   letter-spacing: 0.035rem;
   text-shadow: -9px -6px 40px currentcolor;
-  color: #fed33f;
   text-transform: uppercase;
+}
+
+/* .list-title Color */
+/* .list-title Color */
+/* .list-title Color */
+.wrapper-type--pending .list-title {
+  color: rgba(254, 209, 63, 1);
+}
+.wrapper-type--completed .list-title {
+  color: rgba(43, 228, 234, 1);
+}
+.wrapper-type--canceled .list-title {
+  color: rgba(232, 97, 90, 1);
 }
 
 .list-wrapper:hover .list-title {
@@ -85,31 +144,60 @@
 }
 
 .list-container::-webkit-scrollbar {
-  width: 4px;
+  width: 3px;
 }
 
 .list-container::-webkit-scrollbar-thumb {
-  background-color: rgba(254, 209, 63, 0.6);
   border-radius: 10px;
 }
 
-.list-wrapper:hover .list-container::-webkit-scrollbar-thumb {
-  background-color: #fed33f;
+/* .list-container::-webkit-scrollbar-thumb Background Color */
+/* .list-container::-webkit-scrollbar-thumb Background Color */
+/* .list-container::-webkit-scrollbar-thumb Background Color */
+.wrapper-type--pending .list-container::-webkit-scrollbar-thumb {
+  background-color: rgba(254, 209, 63, 0.6);
+}
+.wrapper-type--completed .list-container::-webkit-scrollbar-thumb {
+  background-color: rgba(43, 228, 234, 0.6);
+}
+.wrapper-type--canceled .list-container::-webkit-scrollbar-thumb {
+  background-color: rgba(232, 97, 90, 0.6);
 }
 
-.list-container::-webkit-scrollbar-track {
-  background-color: rgba(0, 0, 0, 0.3);
-  background-color: rgba(254, 209, 63, 0.1);
+/* :hover .list-container::-webkit-scrollbar-thumb Background Color */
+/* :hover .list-container::-webkit-scrollbar-thumb Background Color */
+/* :hover .list-container::-webkit-scrollbar-thumb Background Color */
+.wrapper-type--pending:hover .list-container::-webkit-scrollbar-thumb {
+  background-color: rgba(254, 209, 63, 1);
+}
+.wrapper-type--completed:hover .list-container::-webkit-scrollbar-thumb {
+  background-color: rgba(43, 228, 234, 1);
+}
+.wrapper-type--canceled:hover .list-container::-webkit-scrollbar-thumb {
+  background-color: rgba(232, 97, 90, 1);
 }
 
-.list-container::-webkit-scrollbar-thumb:active,
+/* scrollbar-track Background Color */
+/* scrollbar-track Background Color */
+/* scrollbar-track Background Color */
+.wrapper-type--pending:hover .list-container::-webkit-scrollbar-track {
+  background-color: rgba(254, 209, 63, 0.3);
+}
+.wrapper-type--completed:hover .list-container::-webkit-scrollbar-track {
+  background-color: rgba(43, 228, 234, 0.3);
+}
+.wrapper-type--canceled:hover .list-container::-webkit-scrollbar-track {
+  background-color: rgba(232, 97, 90, 0.3);
+}
+
+/* .list-container::-webkit-scrollbar-thumb:active,
 .list-container::-webkit-scrollbar-thumb:hover {
   background-color: #fdc91d;
-}
+} */
 
-.list-container::-webkit-scrollbar-thumb:window-inactive {
+/* .list-container::-webkit-scrollbar-thumb:window-inactive {
   background-color: #f1d76e;
-}
+} */
 
 .list-container::-webkit-scrollbar-corner,
 .list-container::-webkit-scrollbar-track-piece {
