--- a/src/components/task-list/task-list.css
+++ b/src/components/task-list/task-list.css
@@ -211,3 +211,66 @@
 .list-container::-webkit-scrollbar-button:horizontal:decrement {
   display: none;
 }
+
+/* Test */
+/* Test */
+/* Test */
+/* Test */
+/* Test */
+/* Test */
+
+.task-input {
+  min-height: 70px;
+  color: rgba(254, 209, 63, 1);
+  width: 100%;
+  font-size: 18px;
+  outline: none;
+  /* text-shadow: -9px -6px 40px currentcolor; */
+  /* background: black;
+  clip-path: polygon(
+    -2px -2px,
+    101% -2px,
+    100.5% calc(100.5% - 1rem + 2px),
+    calc(100.5% - 1rem + -5px) 101%,
+    -2px 110%
+  );
+  border-radius: 6px;
+  padding: 5px 5px 21px 5px;
+  background: #000;
+  padding: 8px;
+  border-radius: 6px;
+  color: rgba(254, 209, 63, 1);
+  position: relative; */
+}
+
+.task-input::before {
+  background-color: #ad7d7d;
+  bottom: 1px;
+  content: "";
+  position: absolute;
+  display: block;
+  height: 3px;
+  position: absolute;
+  right: -6px;
+  top: auto;
+  transform: rotate(-45deg);
+  width: 22.62742px;
+}
+
+/* .task-input textarea {
+  width: 100%;
+  height: 100%;
+  resize: none;
+  border: none;
+  outline: none;
+  padding: 8px;
+  font-size: 1rem;
+  font-family: "VT323", monospace;
+  box-sizing: border-box;
+}
+.task-input textarea::placeholder {
+  color: rgba(0, 0, 0, 0.5);
+}
+.task-input textarea:focus {
+  background-color: rgba(255, 255, 255, 0.8);
+} */
