--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,9 @@
 .header {
   position: relative;
   margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  column-gap: 20px;
 }
 
 .header::after {
@@ -26,11 +29,11 @@
   object-fit: contain;
 }
 
-.header-title {
+.days-left-text {
   font-family: "VT323", monospace;
+  text-transform: uppercase;
   font-size: 1.25rem;
   letter-spacing: 0.035rem;
-  text-shadow: -9px -6px 40px currentcolor;
   color: #e8615a;
-  text-transform: uppercase;
+  text-shadow: -4px -3px 20px currentcolor;
 }
