--- a/src/components/task_card/task-card.css
+++ b/src/components/task_card/task-card.css
@@ -34,6 +34,22 @@
   padding: 5px 5px 21px 5px;
 }
 
+.task-delete--button {
+  position: absolute;
+  top: 6px;
+  right: 6px;
+  background: transparent;
+  border: none;
+  color: inherit;
+  opacity: 0;
+  font-size: 16px;
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+
+.card--wrapper:hover .task-delete--button {
+  opacity: 1;
+}
 /* .card-shadow {
   box-shadow: 0 0 6px rgba(156, 50, 48, 0.6), 0 0 12px rgba(156, 50, 48, 0.4);
 } */
